<resources>
    <string name="app_name">Restroom Tracker</string>
    <string name="login_button_text">Login</string>
    <string name="sign_off_button_text">LOGOUT</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="register_button_text">Register</string>
    <string name="username_hint">USERNAME</string>
    <string name="password_hint">PASSWORD</string>
    <string name="confirm_password_hint">CONFIRM PASSWORD</string>
    <string name="email_hint">EMAIL ADDRESS</string>
    <string name="continue_as_guest_text">Continue as Guest</string>
    <string name="logo_description">Logo</string>
    <string name="title_activity_main_map">Map</string>
    <string name='button_description'>No Description</string>
    <string name="ar">AR</string>

    <string name="title_add">Add a Restroom</string>
    <string name="title_fav">Favorite Restrooms</string>
    <string name="title_settings">Settings</string>
    <string name="title_list">Nearby Restrooms</string>
    <string name="title_report">Report This Restroom</string>
    <string name="title_filters">Map Filters</string>
    <string name="title_ar">AR</string>
    <string name="Restroom">Restroom</string>

    <string name="add">ADD</string>
    <string name="delete_button_text">Delete Account</string>
    <string name="email_placeholder">example@example.com</string>
    <string name="account_textview_text">Email:</string>
    <string name="menu">MENU</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="prompt1">Give the Restroom a Name:</string>
    <string name="prompt2">Score on Cleanliness:</string>
    <string name="prompt3">Score on Privacy:</string>
    <string name="prompt4">Baby Changing Table?</string>
    <string name="prompt5">Handicap Accessible?</string>
    <string name="prompt6">Key Required?</string>
    <string name="prompt7">Automatic Toilet(s)?</string>
    <string name="prompt8">Number of Stalls?</string>
    <string name="prompt9">Inside Building?</string>
    <string name="floor">Floor:</string>
    <string name="floorNumber">#:1-170</string>
    <string name="tvDescrip">Directions for Reaching Restroom:</string>

    <string name="openTime">Opens at:</string>
    <string name="closeTime">Closes at:</string>

    <string name="optional">Optional:</string>
    <string name="leave">Leave Blank</string>
    <string name="upload">Add Photo</string>
    <string name="camera">Take Photo</string>
    <string name="useLocation">Use Location</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="unisex">Unisex</string>
    <string name="family">Family</string>
    <string name="favorite">Favorite</string>

    <string name="cleanlinessScore">"Cleanliness:"</string>

    <string name="review">Leave Review</string>
    <string name="reviewPrompt">Leave Your Own Review:</string>

    <string name="display5">Display 5</string>
    <string name="display15">Display 15</string>
    <string name="display25">Display 25</string>
    <string name="text_username">Username:</string>
    <string name="username_default">Guest</string>


    <string name="lat">Lat:</string>
    <string name="lng">Long:</string>
    <string name="sendReport">Send Report</string>
    <string name="reportPrompt">Please explain in detail the reason for your report:"</string>

    <string-array name="numStallsArray">
        <item>Leave Blank</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9+</item>
    </string-array>
</resources>
